Fixed login button bug on mobile pages

--- a/src/Components/LoginForm/LoginForm.module.css
+++ b/src/Components/LoginForm/LoginForm.module.css
@@ -201,7 +201,7 @@
     padding: 0.722rem;
   }
   .wrapper button {
-    font-size: 0rem;
+    font-size: 0.9rem;
   }
   .input-box input {
     font-size: 0.9rem;
